# pipeawesome2

./: .gitignore  Cargo.toml  README.md  README.src.md  components.dot
.github/workflows/: rust-tag.yml  rust.yml
bats-tests/: pipeawesome.bats
bats-tests/branches/: expected.txt  input.txt  pa.yaml
bats-tests/lint-errors/: pa.json
bats-tests/loops/: expected.txt  pa.yaml
bats-tests/straight_through_pipe/: pa.yaml
bats-tests/word_ladders_basic/: pa.yaml
examples/ls/: pa-dynamically-add-junctions.yml  pa.yaml
examples/tic-tac-toe/: draw.awk  draw.pa.yaml  have_a_go.pa.yaml  many_games.pa.yaml  multiple_turns.pa.yaml  pa.yaml  player.awk  random_player.pa.yaml  referee.awk
res/: modulus_print.awk
res/test/: simple_input.txt
src/: back_off.rs  bin_support.rs  buffer.rs  config.rs  config_io.rs  config_manip.rs  connectable.rs  drain.rs  fake_read.rs  faucet.rs  graph.rs  junction.rs  launch.rs  lib.rs  main.rs  monitor.rs  motion.rs  regulator.rs  spy.rs  startable_control.rs  types.rs  utils.rs  waiter.rs
