[package]
name = "pipeawesome2"
version = "0.1.0"
authors = ["Matthew Forrester <matthew.forrester@speechmarks.com>"]
edition = "2018"

[dependencies]
futures-lite = "1.11.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.9.0"
features = ["unstable"]

[dependencies.tokio]
version = "1.6.0"
features = ["io-std"]
