[package]
name = "pipeawesome2"
version = "0.1.0"
authors = ["Matthew Forrester <matthew.forrester@speechmarks.com>"]
edition = "2018"

[dependencies]
futures = "0.3.16"
async-trait = "0.1.51"
serde_json = "1.0.59"
peg = "0.7.0"
serde = { version = "1.0.117", features = ["derive"] }
async-std = { version = "1.9.0", features = ["unstable"] }
petgraph = "0.6.0"
clap = "2.33.3"
