[package]
name = "pipeawesome2"
version = "0.1.3"
authors = ["Matthew Forrester <matthew.forrester@speechmarks.com>"]
description = "Loops, branches and joins to UNIX pipes… in a sane way…"
license = "GPL-2.0"
edition = "2018"

[dependencies]
futures = "0.3.16"
graphviz-rust = "0.1.2"
async-trait = "0.1.51"
serde_json = "1.0.59"
serde_yaml = "0.8"
peg = "0.7.0"
serde = { version = "1.0.117", features = ["derive"] }
async-std = { version = "1.9.0", features = ["unstable"] }
petgraph = "0.6.0"
clap = "2.33.3"
